--- a/app/views/chat_rooms/show.html.erb
+++ b/app/views/chat_rooms/show.html.erb
@@ -3,11 +3,11 @@
 </div>
 
 <%= form_for @message, url: '#' do |f| %>
+  <%= hidden_field_tag 'chat_room_id', @chat_room.id %>
   <div class="form-group">
     <%= f.label :body %>
     <%= f.text_area :body, class: 'form-control' %>
     <small class="text-muted">From 2 to 1000 characters</small>
   </div>
-
-  <%= f.submit "Post", class: 'btn btn-primary btn-lg' %>
+  <button type="button" class="btn btn-primary" id="post">Post</button>
 <% end %>
